# fermion

./: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
crate/: Cargo.toml
crate/.cargo/: config.toml
crate/src/: lib.rs
crate/src/raytracer/: camera.rs  color.rs  mod.rs  ray.rs  scene.rs  utils.rs  v3.rs
crate/src/raytracer/material/: dialectric.rs  lambertian.rs  metal.rs  mod.rs
crate/src/raytracer/object/: collection.rs  mod.rs  sphere.rs
crate/src/raytracer/texture/: mod.rs  solid.rs
src/: index.css  index.html  index.ts  wasm-worker.ts
src/assets/: default-input.json
